--- a/RobotController/src/main/res/layout/activity_main.xml
+++ b/RobotController/src/main/res/layout/activity_main.xml
@@ -1,16 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
     tools:context=".MainActivity">
 
     <TextView
+            android:id="@+id/xtext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+            android:text="x: "/>
 
-</RelativeLayout>
+    <TextView
+            android:id="@+id/ytext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="y: "/>
+    <TextView
+            android:id="@+id/ztext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="z: "/>
+
+</LinearLayout>
