--- a/RobotController/src/main/res/layout/activity_main.xml
+++ b/RobotController/src/main/res/layout/activity_main.xml
@@ -1,12 +1,19 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingTop="10dp"
+    android:id="@+id/root"
     tools:context=".MainActivity">
 
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/valuesLayout"
+            android:orientation="vertical"
+            android:layout_alignParentLeft="true">
     <TextView
             android:id="@+id/xtext"
         android:layout_width="wrap_content"
@@ -23,5 +30,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="z: "/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/actualValuesLayout"
+        android:orientation="vertical"
+        android:minWidth="50dp"
+        android:layout_alignParentRight="true">
+    <TextView
+            android:id="@+id/x2text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="x: "/>
 
-</LinearLayout>
+    <TextView
+            android:id="@+id/y2text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="y: "/>
+    <TextView
+            android:id="@+id/z2text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="z: "/>
+    </LinearLayout>
+</RelativeLayout>
